Rewrite feature section copy

--- a/views/layouts/features.gohtml
+++ b/views/layouts/features.gohtml
@@ -2,8 +2,8 @@
     <div class="features hero is-large" id="features">
         <div class="hero-body">
             <div class="container">
-                {{template "heroTitle" "Why you should Discover Now"}}
-                {{template "heroSubtitle" "We make it simple to find new music you'll love with ease and confidence"}}
+                {{template "heroTitle" "Why should you Discover Now?"}}
+                {{template "heroSubtitle" "Sometimes you just want something new. We'll help you find it."}}
                 <div class="columns">
                     <div class="column">
                         <div class="card">
@@ -18,7 +18,7 @@
                                 </svg>
                             </div>
                             <div class="card-content">
-                                {{template "cardTitle" "Log in simply and securely"}}
+                                {{template "cardTitle" "Log in quickly and securely"}}
                                 {{template "cardText" "You have more than enough accounts and passwords to worry about. Simply connect to your existing Spotify account and we'll take care of the rest."}}
                             </div>
                         </div>
@@ -37,7 +37,7 @@
                             </div>
                             <div class="card-content">
                                 {{template "cardTitle" "Enjoy with no strings attached"}}
-                                {{template "cardText" "Discover new music for free. We don't advertise, analyze, or as for a subscription. All we ask is for you to share and enjoy your experience of discovery."}}
+                                {{template "cardText" "You won't be advertised, analyzed, or asked for a subscription. If you enjoy the experience and would like to pay it forward, share with a friend."}}
                             </div>
                         </div>
                     </div>
@@ -59,7 +59,7 @@
                             </div>
                             <div class="card-content">
                                 {{template "cardTitle" "Discover anytime and anywhere"}}
-                                {{template "cardText" "Designed from the ground up to offer a polished experience for desktop, mobile, and everything in between. Discovery is only a tap or click away."}}
+                                {{template "cardText" "Designed from the ground up to offer a polished experience for desktop, mobile, and everything in between. Discovery is never more than a tap or click away."}}
                             </div>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                             </div>
                             <div class="card-content">
                                 {{template "cardTitle" "Explore the open source code"}}
-                                {{template "cardText" "The complete project is hosted on GitHub for your viewing pleasure. Take a quick peek to see how we handle your data and keep discovery ticking."}}
+                                {{template "cardText" "The complete project is hosted on GitHub for your viewing pleasure. Take a quick peek to see how we manage your data and keep discovery ticking."}}
                             </div>
                         </div>
                     </div>
