--- a/sass/settings/init.scss
+++ b/sass/settings/init.scss
@@ -35,7 +35,7 @@ $text-invert: $grey-invert;
 
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker&text=Discover%20NowError404');
-@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%21%22%27%2C%2D%2E%40');
+@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%21%22%27%2C%2D%2E%40%3F');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%27%2C%2D%2E"');
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700');
 
