Rewrite steps section copy

--- a/views/layouts/steps.gohtml
+++ b/views/layouts/steps.gohtml
@@ -2,8 +2,8 @@
     <div class="steps hero is-large">
         <div class="hero-body">
             <div class="container">
-                {{template "heroTitle" "It only takes seconds"}}
-                {{template "heroSubtitle" "Faithfully designed to get you listening to new music in as little as a few clicks"}}
+                {{template "heroTitle" "How does it work?"}}
+                {{template "heroSubtitle" "You connect. A computer somewhere does some math. You discover."}}
                 <div class="columns">
                     <div class="column">
                         <div class="card">
@@ -20,7 +20,7 @@
                             </div>
                             <div class="card-content">
                                 {{template "cardTitle" "Connect to Spotify"}}
-                                {{template "cardText" "When you're ready to give Discover Now a try, you'll be redirected to Spotify where you can log into your account. Once you're logged in, we'll take care of the rest."}}
+                                {{template "cardText" "Clicking on the Connect button will redirect you to Spotify. You may be asked to enter your credentials and look over the requested data. If you accept, Discover Now will handle the rest."}}
                             </div>
                         </div>
                     </div>
@@ -37,7 +37,7 @@
                             </div>
                             <div class="card-content">
                                 {{template "cardTitle" "Analyze your interests"}}
-                                {{template "cardText" "Our algorithm will analyze your listening habits to generate your personalized playlist. Inside, you'll find artists we think you'll love but just haven't connected with yet."}}
+                                {{template "cardText" "Our algorithm will analyze your listening habits and generate your personalized playlist. We'll find tracks from artists you would appreciate but have yet to fully connect with."}}
                             </div>
                         </div>
                     </div>
@@ -56,7 +56,7 @@
                             </div>
                             <div class="card-content">
                                 {{template "cardTitle" "Discover new music"}}
-                                {{template "cardText" "Your Discover Now playlist is then added to your Spotify profile. All that's left is to enjoy your new discovery. If we miss our mark, you can always try again."}}
+                                {{template "cardText" "Your Discover Now playlist will be added to your Spotify profile. All that's left is to enjoy your new discovery. If we miss our mark, you can always try again after listening to more music."}}
                             </div>
                         </div>
                     </div>
