--- a/views/layouts/landing.gohtml
+++ b/views/layouts/landing.gohtml
@@ -11,7 +11,7 @@
                     <div class="buttons is-centered is-hidden-tablet">
                         {{template "splashButtons" .}}
                     </div>
-                    <div>
+                    <div class="is-hidden-mobile">
                         <a class="anchor has-text-grey-dark" onclick="smoothScroll('features')">
                             <span class="is-size-5 is-underlined is-family-monospace">
                                 Learn more
