--- a/views/layouts/heroSubtitle.gohtml
+++ b/views/layouts/heroSubtitle.gohtml
@@ -1,5 +1,8 @@
 {{define "heroSubtitle"}}
-    <h3 class="subtitle is-spaced has-text-grey is-family-secondary">
+    <h3 class="subtitle is-spaced has-text-grey is-family-secondary is-hidden-mobile">
+        {{.}}
+    </h3>
+    <h3 class="subtitle has-text-grey is-family-secondary is-marginless is-paddingless has-text-centered is-hidden-tablet">
         {{.}}
     </h3>
 {{end}}
