Center CTA on both mobile and desktop

--- a/views/layouts/cta.gohtml
+++ b/views/layouts/cta.gohtml
@@ -1,19 +1,11 @@
 {{define "cta"}}
     <div class="hero is-small is-success">
         <div class="hero-body">
-            <div class="container">
-                <div class="columns">
-                    <div class="column">
-                        <h2 class="title is-size-2 is-family-secondary has-text-right is-marginless">
-                            It's time to discover.
-                        </h2>
-                    </div>
-                    <div class="column">
-                        <div class="has-text-left">
-                            {{template "button" . | arg "Text" "Connect" | arg "Icon" "fab fa-spotify fa-lg" | arg "Class" "is-medium is-primary" | arg "Href" .URL}}
-                        </div>
-                    </div>
-                </div>
+            <div class="container has-text-centered">
+                <h2 class="title is-size-2 is-family-secondary">
+                    It's time to discover.
+                </h2>
+                {{template "button" . | arg "Text" "Connect" | arg "Icon" "fab fa-spotify fa-lg" | arg "Class" "is-medium is-primary is-rounded" | arg "Href" .URL}}
             </div>
         </div>
     </div>
