--- a/views/layouts/footerTitle.gohtml
+++ b/views/layouts/footerTitle.gohtml
@@ -1,5 +1,8 @@
 {{define "footerTitle"}}
-    <h4 class="footer__title title is-size-5 has-text-primary is-family-secondary">
+    <h4 class="footer__title title is-size-5 has-text-primary has-text-left is-family-secondary is-hidden-mobile">
+        {{.}}
+    </h4>
+    <h4 class="title is-size-5 has-text-primary has-text-centered is-family-secondary is-paddingless is-marginless is-hidden-tablet">
         {{.}}
     </h4>
 {{end}}
