--- a/views/layouts/splashHeader.gohtml
+++ b/views/layouts/splashHeader.gohtml
@@ -3,7 +3,7 @@
         <h1 class="title is-family-code has-text-weight-bold is-size-0 is-spaced is-hidden-mobile">
             {{$args.Text}}
         </h1>
-        <h1 class="splash__header title is-family-code has-text-weight-bold has-text-centered is-hidden-tablet">
+        <h1 class="splash__header_mobile title is-fam   ily-code has-text-weight-bold has-text-centered is-hidden-tablet">
             {{$args.Text}}
         </h1>
     {{end}}
