--- a/sass/components/splash.scss
+++ b/sass/components/splash.scss
@@ -1,6 +1,7 @@
 .splash {
-  &__header {
+  &__header_mobile {
     font-size: 4.5rem;
+    margin-bottom: 4rem !important;
   }
 
   &__subheader_desktop {
