--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -1,12 +1,12 @@
 {{define "page"}}
     {{template "landing" .}}
-    <section class="content">
+    <main class="content">
         {{template "features"}}
         {{template "steps"}}
         {{template "cta" .}}
         <div class="hero is-small is-light">
             <div class="hero-body"></div>
         </div>
-    </section>
+    </main>
     {{template "footer"}}
 {{end}}
