--- a/views/layouts/landing.gohtml
+++ b/views/layouts/landing.gohtml
@@ -1,5 +1,5 @@
 {{define "landing"}}
-    <section class="landing hero is-fullheight">
+    <header class="landing hero is-fullheight">
         <div class="hero-body">
             <div class="container">
                 <div class="splash">
@@ -24,5 +24,5 @@
                 </div>
             </div>
         </div>
-    </section>
+    </header>
 {{end}}
