--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -1,5 +1,5 @@
 {{define "page"}}
-    {{template "landing" .}}
+    {{template "splash" .}}
     <main class="content">
         {{template "features"}}
         {{template "steps"}}
