--- a/sass/components/splash.scss
+++ b/sass/components/splash.scss
@@ -1,4 +1,9 @@
 .splash {
+  background-image: linear-gradient(rgba(0,0,0,0.1), rgb(0,0,0,0.1)), url(/static/images/cassette.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
   &__header_mobile {
     font-size: 4.5rem;
     margin-bottom: 4rem !important;
