--- a/views/layouts/splashSubheader.gohtml
+++ b/views/layouts/splashSubheader.gohtml
@@ -1,10 +1,10 @@
 {{define "splashSubheader"}}
     {{if $args := . | require "Text" "string" | args}}
-        <h2 class="splash__subheader_desktop is-family-secondary has-text-grey-dark has-text-weight-medium is-size-3 is-hidden-mobile">
+        <p class="splash__subheader_desktop is-family-secondary has-text-grey-dark has-text-weight-medium is-size-3 is-hidden-mobile">
             {{$args.Text}}
-        </h2>
-        <h2 class="splash__subheader_mobile is-family-secondary has-text-grey-dark has-text-weight-medium is-size-4 has-text-centered is-spaced is-hidden-tablet">
+        </p>
+        <p class="splash__subheader_mobile is-family-secondary has-text-grey-dark has-text-weight-medium is-size-4 has-text-centered is-spaced is-hidden-tablet">
             {{$args.Text}}
-        </h2>
+        </p>
     {{end}}
 {{end}}
