Simplify splashHeader and splashSubheader template

--- a/views/layouts/splash.gohtml
+++ b/views/layouts/splash.gohtml
@@ -2,8 +2,8 @@
     <header class="splash hero is-fullheight">
         <div class="hero-body">
             <div class="container">
-                {{template  "splashSubheader" . | arg "Text" "Don't wait for Monday."}}
-                {{template "splashHeader" . | arg "Text" "Discover Now"}}
+                {{template "splashSubheader" "Don't wait for Monday."}}
+                {{template "splashHeader" "Discover Now"}}
                 <div class="buttons is-hidden-mobile">
                     {{template "splashButtons" .}}
                 </div>
