--- a/sass/components/footer.scss
+++ b/sass/components/footer.scss
@@ -1,19 +1,17 @@
 .footer {
-
-
-  .footer__header {
+  &__header {
     padding-bottom: 1.5rem;
   }
 
-  .footer__title {
+  &__title {
     padding: 0.25rem 0;
   }
 
-  .footer__copy {
+  &__copy {
     padding-right: 2rem;
   }
 
-  .footer__link {
+  &__link {
     padding: 0.25rem 0;
     letter-spacing: 0.5px;
   }
