--- a/static/stylesheets/global.css
+++ b/static/stylesheets/global.css
@@ -6419,16 +6419,16 @@ body.has-spaced-navbar-fixed-bottom {
   background: linear-gradient(45deg, white 0%, rgba(255, 255, 255, 0.738) 19%, rgba(255, 255, 255, 0.541) 34%, rgba(255, 255, 255, 0.382) 47%, rgba(255, 255, 255, 0.278) 56.5%, rgba(255, 255, 255, 0.194) 65%, rgba(255, 255, 255, 0.126) 73%, rgba(255, 255, 255, 0.075) 80.2%, rgba(255, 255, 255, 0.042) 86.1%, rgba(255, 255, 255, 0.021) 91%, rgba(255, 255, 255, 0.008) 95.2%, rgba(255, 255, 255, 0.002) 98.2%, rgba(255, 255, 255, 0) 100%);
 }
 
-.footer .footer__header {
+.footer__header {
   padding-bottom: 1.5rem;
 }
-.footer .footer__title {
+.footer__title {
   padding: 0.25rem 0;
 }
-.footer .footer__copy {
+.footer__copy {
   padding-right: 2rem;
 }
-.footer .footer__link {
+.footer__link {
   padding: 0.25rem 0;
   letter-spacing: 0.5px;
 }
