Fix footer spacing and include small tag for author line

--- a/views/layouts/footer.gohtml
+++ b/views/layouts/footer.gohtml
@@ -4,7 +4,7 @@
             <div class="columns">
                 <div class="column">
                     {{template "footerHeader" "Discover Now"}}
-                    {{template "footerCopy" "Discover Now is a Spotify playlist generator that learns from a user's recent musical interests. We are not endorsed by Spotify."}}
+                    {{template "footerCopy" "Discover Now is a Spotify playlist generator that learns from a user's recent musical interests. This project is not endorsed by Spotify."}}
                 </div>
                 <div class="column">
                     {{template "footerTitle" "Project"}}
@@ -18,7 +18,7 @@
                     {{template "footerLink" . | arg "Text" "Unsplash" | arg "Href" "https://unsplash.com/@markusspiske"}}
                     {{template "footerLink" . | arg "Text" "Cool Backgrounds" | arg "Href" "https://coolbackgrounds.io/"}}
                 </div>
-                <div class="column footer__stack">
+                <div class="column">
                     {{template "footerTitle" "Powered By"}}
                     {{template "footerLink" . | arg "Text" "Go" | arg "Href" "https://golang.org/"}}
                     {{template "footerLink" . | arg "Text" "Sass" | arg "Href" "https://sass-lang.com/"}}
