--- a/views/layouts/footerAuthor.gohtml
+++ b/views/layouts/footerAuthor.gohtml
@@ -1,5 +1,5 @@
 {{define "footerAuthor"}}
-    <p class="has-text-primary">
+    <small class="has-text-primary">
         Made with <span class="has-text-pink"><i class="fas fa-heart"></i></span> by Henry Sarabia
-    </p>
+    </small>
 {{end}}
