--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -2,7 +2,7 @@
     {{template "splash" .}}
     <main class="content">
         {{template "features"}}
-        {{template "steps"}}
+        {{template "procedure"}}
         {{template "cta" .}}
         <div class="hero is-small is-light">
             <div class="hero-body"></div>
