--- a/views/layouts/procedure.gohtml
+++ b/views/layouts/procedure.gohtml
@@ -1,5 +1,5 @@
-{{define "steps"}}
-    <div class="steps hero is-large">
+{{define "procedure"}}
+    <div class="procedure hero is-large">
         <div class="hero-body">
             <div class="container">
                 {{template "heroTitle" "How does it work?"}}
