--- a/sass/settings/global.scss
+++ b/sass/settings/global.scss
@@ -25,7 +25,7 @@
 // Import custom stylesheets
 
 @import "../components/splash";
-@import "../components/steps";
+@import "../components/procedure";
 @import "../components/footer";
 @import "../components/anchor";
 @import "../components/button";
