--- a/static/stylesheets/global.css
+++ b/static/stylesheets/global.css
@@ -6415,7 +6415,7 @@ body.has-spaced-navbar-fixed-bottom {
   margin-bottom: -1.25rem;
 }
 
-.steps {
+.procedure {
   background: linear-gradient(45deg, white 0%, rgba(255, 255, 255, 0.738) 19%, rgba(255, 255, 255, 0.541) 34%, rgba(255, 255, 255, 0.382) 47%, rgba(255, 255, 255, 0.278) 56.5%, rgba(255, 255, 255, 0.194) 65%, rgba(255, 255, 255, 0.126) 73%, rgba(255, 255, 255, 0.075) 80.2%, rgba(255, 255, 255, 0.042) 86.1%, rgba(255, 255, 255, 0.021) 91%, rgba(255, 255, 255, 0.008) 95.2%, rgba(255, 255, 255, 0.002) 98.2%, rgba(255, 255, 255, 0) 100%);
 }
 
