Divide home page into sections

--- a/views/layouts/cta.gohtml
+++ b/views/layouts/cta.gohtml
@@ -1,5 +1,5 @@
 {{define "cta"}}
-    <div class="hero is-small is-success">
+    <section class="hero is-small is-success">
         <div class="hero-body">
             <div class="container has-text-centered">
                 <h2 class="title is-size-2 is-family-secondary">
@@ -8,5 +8,5 @@
                 {{template "button" . | arg "Text" "Connect" | arg "Icon" "fab fa-spotify fa-lg" | arg "Class" "is-medium is-primary is-rounded" | arg "Href" .URL}}
             </div>
         </div>
-    </div>
+    </section>
 {{end}}
