--- a/views/layouts/features.gohtml
+++ b/views/layouts/features.gohtml
@@ -1,5 +1,5 @@
 {{define "features"}}
-    <div class="features hero is-large" id="features">
+    <section class="features hero is-large" id="features">
         <div class="hero-body">
             <div class="container">
                 {{template "heroTitle" "Why should you Discover Now?"}}
@@ -84,5 +84,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 {{end}}
