--- a/views/layouts/procedure.gohtml
+++ b/views/layouts/procedure.gohtml
@@ -1,5 +1,5 @@
 {{define "procedure"}}
-    <div class="procedure hero is-large">
+    <section class="procedure hero is-large">
         <div class="hero-body">
             <div class="container">
                 {{template "heroTitle" "How does it work?"}}
@@ -63,5 +63,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 {{end}}
