Rename hero templates to section

--- a/views/layouts/features.gohtml
+++ b/views/layouts/features.gohtml
@@ -1,8 +1,8 @@
 {{define "features"}}
     <section class="features section is-large" id="features">
         <div class="container">
-            {{template "heroTitle" "Why should you Discover Now?"}}
-            {{template "heroSubtitle" "Sometimes you just want something new. We'll help you find it."}}
+            {{template "sectionTitle" "Why should you Discover Now?"}}
+            {{template "sectionSubtitle" "Sometimes you just want something new. We'll help you find it."}}
             <div class="columns">
                 <div class="column">
                     <div class="card">
