--- a/views/layouts/sectionSubtitle.gohtml
+++ b/views/layouts/sectionSubtitle.gohtml
@@ -1,4 +1,4 @@
-{{define "heroSubtitle"}}
+{{define "sectionSubtitle"}}
     <p class="subtitle is-spaced has-text-grey is-family-secondary is-hidden-mobile">
         {{.}}
     </p>
