--- a/sass/settings/global.scss
+++ b/sass/settings/global.scss
@@ -31,5 +31,5 @@
 @import "../components/button";
 @import "../components/card";
 @import "../components/content";
-@import "../components/hero";
+@import "../components/section";
 @import "../components/icon";
