--- a/static/stylesheets/global.css
+++ b/static/stylesheets/global.css
@@ -6465,7 +6465,7 @@ body.has-spaced-navbar-fixed-bottom {
   background-size: cover;
 }
 
-.hero__title {
+.section__title {
   padding-bottom: 1.5rem;
 }
 
