--- a/views/layouts/procedure.gohtml
+++ b/views/layouts/procedure.gohtml
@@ -1,8 +1,8 @@
 {{define "procedure"}}
     <section class="procedure section is-large">
         <div class="container">
-            {{template "heroTitle" "How does it work?"}}
-            {{template "heroSubtitle" "You connect. A computer somewhere does some math. You discover."}}
+            {{template "sectionTitle" "How does it work?"}}
+            {{template "sectionSubtitle" "You connect. A computer somewhere does some math. You discover."}}
             <div class="columns">
                 <div class="column">
                     <div class="card">
