--- a/static/stylesheets/global.css
+++ b/static/stylesheets/global.css
@@ -5275,7 +5275,7 @@ th {
   padding: 1rem 0.5rem 2rem;
   border-left: 4px solid #c7dcd5;
 }
-.card__text {
+.card__copy {
   line-height: 1.7em;
 }
 .card-content {
