--- a/views/layouts/procedure.gohtml
+++ b/views/layouts/procedure.gohtml
@@ -21,7 +21,7 @@
                         </div>
                         <div class="card-content">
                             {{template "cardTitle" "Connect to Spotify"}}
-                            {{template "cardText" "Clicking on the Connect button will redirect you to Spotify. You may be asked to enter your credentials and look over the requested data. If you accept, Discover Now will handle the rest."}}
+                            {{template "cardCopy" "Clicking on the Connect button will redirect you to Spotify. You may be asked to enter your credentials and look over the requested data. If you accept, Discover Now will handle the rest."}}
                         </div>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                         </div>
                         <div class="card-content">
                             {{template "cardTitle" "Analyze your interests"}}
-                            {{template "cardText" "Our algorithm will analyze your listening habits and generate your personalized playlist. We'll find tracks from artists you would appreciate but have yet to fully connect with."}}
+                            {{template "cardCopy" "Our algorithm will analyze your listening habits and generate your personalized playlist. We'll find tracks from artists you would appreciate but have yet to fully connect with."}}
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                         </div>
                         <div class="card-content">
                             {{template "cardTitle" "Discover new music"}}
-                            {{template "cardText" "Your Discover Now playlist will be added to your Spotify profile. All that's left is to enjoy your new discovery. If we miss our mark, you can always try again after listening to more music."}}
+                            {{template "cardCopy" "Your Discover Now playlist will be added to your Spotify profile. All that's left is to enjoy your new discovery. If we miss our mark, you can always try again after listening to more music."}}
                         </div>
                     </div>
                 </div>
