--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -5,7 +5,7 @@
   padding: 1rem .5rem 2rem;
   border-left: 4px solid hsl(160, 23%, 82%);
 
-  &__text {
+  &__copy {
     line-height: 1.7em;
   }
 
