--- a/static/stylesheets/global.css
+++ b/static/stylesheets/global.css
@@ -2,11 +2,6 @@
 @import url("https://fonts.googleapis.com/css?family=Quicksand:300,400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%21%22%27%2C%2D%2E%40%3F");
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%27%2C%2D%2E"');
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700");
-*:focus {
-  outline: 3px solid #ffe88f;
-  outline-offset: 2px;
-}
-
 .button, .is-unselectable, .delete {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -1180,6 +1175,11 @@ a.has-text-pink:hover, a.has-text-pink:focus {
 
 .is-spaced {
   padding-bottom: 1rem !important;
+}
+
+*:focus {
+  outline: 3px solid #ffe88f !important;
+  outline-offset: 2px !important;
 }
 
 @keyframes spinAround {
