--- a/views/layouts/splash.gohtml
+++ b/views/layouts/splash.gohtml
@@ -11,10 +11,8 @@
                     {{template "splashButtons" .}}
                 </div>
                 <div class="is-hidden-mobile">
-                    <a class="anchor has-text-grey-dark" onclick="smoothScroll('features')">
-                        <span class="is-size-5 is-underlined is-family-monospace">
-                            Learn more
-                        </span>
+                    <a class="anchor has-text-grey-dark" href="#features">
+                        <span class="is-size-5 is-underlined is-family-monospace">Learn more</span>
                         <span class="anchor__icon icon">
                             <i class="fas fa-angle-down fa-lg"></i>
                         </span>
