--- a/views/layouts/resultSubheader.gohtml
+++ b/views/layouts/resultSubheader.gohtml
@@ -1,5 +1,5 @@
 {{define "resultSubheader"}}
-    <h2 class="title is-size-3 has-text-grey-dark has-text-weight-normal is-family-secondary">
+    <p class="title is-size-3 has-text-grey-dark has-text-weight-normal is-family-secondary">
         {{.}}
-    </h2>
+    </p>
 {{end}}
