Add aria-hidden to SVG images

--- a/views/layouts/features.gohtml
+++ b/views/layouts/features.gohtml
@@ -7,8 +7,8 @@
                 <div class="column">
                     <div class="card">
                         <div class="card-image has-text-centered">
-                            <figure>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-user-lock heroicon heroicons-lg">
+                            <figure aria-hidden="true">
+                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-user-lock heroicon heroicons-lg">
                                     <path class="heroicon-user-lock-top heroicon-light-green heroicon-component-fill" d="M66.11 73.8L51 66.23V72a10 10 0 1 1-20 0v-5.76L7.27 78.1A8.65 8.65 0 0 0 3 85v13h72.24a17 17 0 0 1-9.13-24.2z"></path>
                                     <path class="heroicon-user-lock-face heroicon-rose heroicon-component-fill" d="M33 60.5V72a8 8 0 1 0 16 0V60.5A22 22 0 0 0 63 40V24a22 22 0 0 0-44 0v16a22 22 0 0 0 14 20.5z"></path>
                                     <circle class="heroicon-user-lock-circle heroicon-green heroicon-component-fill" cx="81" cy="82" r="17"></circle>
@@ -27,8 +27,8 @@
                 <div class="column">
                     <div class="card">
                         <div class="card-image has-text-centered">
-                            <figure>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-wallet heroicon heroicons-lg">
+                            <figure aria-hidden="true">
+                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-wallet heroicon heroicons-lg">
                                     <path class="heroicon-wallet-cover heroicon-brown heroicon-component-fill" d="M98 66v20a4 4 0 0 1-4 4H8.5A8.5 8.5 0 0 1 0 81.5v-63C0 13.8 3.8 10 8.5 10H82a4 4 0 0 1 4 4h4v3h4v4a4 4 0 0 1 4 4v21a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2z"></path>
                                     <path class="heroicon-wallet-strap heroicon-brown heroicon-component-fill" d="M70 56a10 10 0 0 1 10-10h18a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H80a10 10 0 0 1-10-10z"></path>
                                     <circle class="heroicon-wallet-snap heroicon-green heroicon-component-fill" cx="80" cy="56" r="5"></circle>
@@ -47,8 +47,8 @@
                 <div class="column">
                     <div class="card">
                         <div class="card-image has-text-centered">
-                            <figure>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-devices heroicon heroicons-lg">
+                            <figure aria-hidden="true">
+                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-devices heroicon heroicons-lg">
                                     <path class="heroicon-devices-tablet-edge-outer heroicon-light-green heroicon-component-fill" d="M6 2h68a4 4 0 0 1 4 4v22h-1V6a3 3 0 0 0-3-3H6a3 3 0 0 0-3 3v88a3 3 0 0 0 3 3h52.8c.21.36.45.7.73 1H6a4 4 0 0 1-4-4V6a4 4 0 0 1 4-4z"></path>
                                     <path class="heroicon-devices-tablet-edge-inner heroicon-light-green heroicon-component-fill" d="M58.34 96a5.99 5.99 0 0 1-.34-2v-5H7V11h66v17h3V6a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v88c0 1.1.9 2 2 2h52.34z"></path>
                                     <path class="heroicon-devices-tablet-screen heroicon-component-fill" d="M72 28V12H8v76h50V34a6 6 0 0 1 6-6h8z"></path>
@@ -71,8 +71,8 @@
                 <div class="column">
                     <div class="card">
                         <div class="card-image has-text-centered">
-                            <figure>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-code heroicon heroicon-lg">
+                            <figure aria-hidden="true">
+                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-code heroicon heroicon-lg">
                                     <path class="heroicon-code-interface heroicon-component-fill" d="M0 18h100v59.997c0 2.21-1.8 4.003-3.997 4.003H3.997C1.79 82 0 80.205 0 77.997V18z"></path>
                                     <path class="heroicon-code-side heroicon-light-green heroicon-component-fill" d="M1 17h7v64H4.01C2.346 81 1 79.663 1 78V17z"></path>
                                     <path class="heroicon-code-menu-bar heroicon-light-green heroicon-component-fill" d="M0 5.996C0 3.79 1.8 2 3.997 2h92.006C98.21 2 100 3.79 100 5.996V18H0V5.996z"></path>
