--- a/views/layouts/procedure.gohtml
+++ b/views/layouts/procedure.gohtml
@@ -7,8 +7,8 @@
                 <div class="column">
                     <div class="card">
                         <div class="card-image has-text-centered">
-                            <figure>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-identification heroicon heroicons-lg">
+                            <figure aria-hidden="true">
+                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-identification heroicon heroicons-lg">
                                     <path class="heroicon-identification-top heroicon-green heroicon-component-fill" d="M44 21H6a6 6 0 0 0-6 6v13h100V27a6 6 0 0 0-6-6H56v4a4 4 0 0 1 0 8H44a4 4 0 0 1 0-8v-4z"></path>
                                     <path class="heroicon-identification-clip heroicon-silver heroicon-component-fill" d="M44 11h12v18H44V11zm6 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
                                     <path class="heroicon-identification-card heroicon-component-fill" d="M0 40h100v43a6 6 0 0 1-6 6H6a6 6 0 0 1-6-6V40z"></path>
@@ -28,8 +28,8 @@
                 <div class="column">
                     <div class="card">
                         <div class="card-image has-text-centered">
-                            <figure>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-pie-chart heroicon heroicons-lg">
+                            <figure aria-hidden="true">
+                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-pie-chart heroicon heroicons-lg">
                                     <path class="heroicon-pie-chart-slice-1 heroicon-light-green heroicon-component-fill" d="M89.96 56H44V10.04A44 44 0 1 0 89.96 56z"></path>
                                     <path class="heroicon-pie-chart-slice-2 heroicon-yellow heroicon-component-fill" d="M67.88 5.78L52 37.53V2.03a42.77 42.77 0 0 1 15.88 3.75z"></path>
                                     <path class="heroicon-pie-chart-slice-3 heroicon-green heroicon-component-fill" d="M97.96 48a44 44 0 0 0-22.51-36.43L57.24 48h40.72z"></path>
@@ -47,8 +47,8 @@
                 <div class="column">
                     <div class="card">
                         <div class="card-image has-text-centered">
-                            <figure>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-headphones heroicon heroicons-lg">
+                            <figure aria-hidden="true">
+                                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="heroicon-headphones heroicon heroicons-lg">
                                     <path class="heroicon-headphones-strap heroicon-green heroicon-component-fill" d="M50 2a38 38 0 0 1 38 38v13.1a5.02 5.02 0 0 0-2 0V40a36 36 0 1 0-72 0v13.1a5.02 5.02 0 0 0-2 0V40A38 38 0 0 1 50 2zm33.68 59.74a5 5 0 0 0 1.74 1L80 72.12v-4l1.73-3 1.95-3.38zM20 72.12l-5.42-9.38a5 5 0 0 0 1.74-1l1.95 3.38 1.73 3v4z"></path>
                                     <path class="heroicon-headphones-strap-cushion heroicon-grey heroicon-component-fill" d="M79.9 23.81a34 34 0 0 0-59.8 0l1.78.9a32 32 0 0 1 56.24 0l1.79-.9z"></path>
                                     <path class="heroicon-headphones-hinges heroicon-yellow heroicon-component-fill" d="M13 62a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm74 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8z"></path>
