--- a/static/stylesheets/global.css
+++ b/static/stylesheets/global.css
@@ -600,15 +600,15 @@ a.has-text-primary:hover, a.has-text-primary:focus {
 }
 
 .has-text-link {
-  color: #3273dc !important;
+  color: #707070 !important;
 }
 
 a.has-text-link:hover, a.has-text-link:focus {
-  color: #205bbc !important;
+  color: #575757 !important;
 }
 
 .has-background-link {
-  background-color: #3273dc !important;
+  background-color: #707070 !important;
 }
 
 .has-text-info {
@@ -1177,6 +1177,15 @@ a.has-text-pink:hover, a.has-text-pink:focus {
   padding-bottom: 1rem !important;
 }
 
+.focus--keyboard, a:focus {
+  outline: #ffe88f solid 2px !important;
+  outline-offset: 1px !important;
+}
+
+.focus--mouse, a:focus.focus--mouse {
+  outline: dimgrey solid thin !important;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -1260,7 +1269,7 @@ body {
 }
 
 a {
-  color: #3273dc;
+  color: #707070;
   cursor: pointer;
   text-decoration: none;
 }
@@ -1537,7 +1546,7 @@ th {
   color: #363636;
 }
 .button:focus:not(:active), .button.is-focused:not(:active) {
-  box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
+  box-shadow: 0 0 0 0.125em rgba(112, 112, 112, 0.25);
 }
 .button:active, .button.is-active {
   border-color: #4a4a4a;
@@ -1568,11 +1577,12 @@ th {
   color: #0a0a0a;
 }
 .button.is-white:hover, .button.is-white.is-hovered {
-  background-color: #f9f9f9;
+  background-color: #d9d9d9;
   border-color: transparent;
   color: #0a0a0a;
 }
 .button.is-white:focus, .button.is-white.is-focused {
+  background-color: #d9d9d9;
   border-color: transparent;
   color: #0a0a0a;
 }
@@ -1645,11 +1655,12 @@ th {
   color: white;
 }
 .button.is-black:hover, .button.is-black.is-hovered {
-  background-color: #040404;
+  background-color: black;
   border-color: transparent;
   color: white;
 }
 .button.is-black:focus, .button.is-black.is-focused {
+  background-color: black;
   border-color: transparent;
   color: white;
 }
@@ -1722,11 +1733,12 @@ th {
   color: #363636;
 }
 .button.is-light:hover, .button.is-light.is-hovered {
-  background-color: #eeeeee;
+  background-color: #cfcfcf;
   border-color: transparent;
   color: #363636;
 }
 .button.is-light:focus, .button.is-light.is-focused {
+  background-color: #cfcfcf;
   border-color: transparent;
   color: #363636;
 }
@@ -1799,11 +1811,12 @@ th {
   color: whitesmoke;
 }
 .button.is-dark:hover, .button.is-dark.is-hovered {
-  background-color: #2f2f2f;
+  background-color: #0f0f0f;
   border-color: transparent;
   color: whitesmoke;
 }
 .button.is-dark:focus, .button.is-dark.is-focused {
+  background-color: #0f0f0f;
   border-color: transparent;
   color: whitesmoke;
 }
@@ -1876,11 +1889,12 @@ th {
   color: rgba(0, 0, 0, 0.7);
 }
 .button.is-primary:hover, .button.is-primary.is-hovered {
-  background-color: #53d37f;
+  background-color: #2fb65e;
   border-color: transparent;
   color: rgba(0, 0, 0, 0.7);
 }
 .button.is-primary:focus, .button.is-primary.is-focused {
+  background-color: #2fb65e;
   border-color: transparent;
   color: rgba(0, 0, 0, 0.7);
 }
@@ -1948,35 +1962,36 @@ th {
   color: rgba(0, 0, 0, 0.7);
 }
 .button.is-link {
-  background-color: #3273dc;
+  background-color: #707070;
   border-color: transparent;
   color: #fff;
 }
 .button.is-link:hover, .button.is-link.is-hovered {
-  background-color: #276cda;
+  background-color: #4a4a4a;
   border-color: transparent;
   color: #fff;
 }
 .button.is-link:focus, .button.is-link.is-focused {
+  background-color: #4a4a4a;
   border-color: transparent;
   color: #fff;
 }
 .button.is-link:focus:not(:active), .button.is-link.is-focused:not(:active) {
-  box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
+  box-shadow: 0 0 0 0.125em rgba(112, 112, 112, 0.25);
 }
 .button.is-link:active, .button.is-link.is-active {
-  background-color: #2366d1;
+  background-color: #636363;
   border-color: transparent;
   color: #fff;
 }
 .button.is-link[disabled], fieldset[disabled] .button.is-link {
-  background-color: #3273dc;
+  background-color: #707070;
   border-color: transparent;
   box-shadow: none;
 }
 .button.is-link.is-inverted {
   background-color: #fff;
-  color: #3273dc;
+  color: #707070;
 }
 .button.is-link.is-inverted:hover {
   background-color: #f2f2f2;
@@ -1985,29 +2000,29 @@ th {
   background-color: #fff;
   border-color: transparent;
   box-shadow: none;
-  color: #3273dc;
+  color: #707070;
 }
 .button.is-link.is-loading::after {
   border-color: transparent transparent #fff #fff !important;
 }
 .button.is-link.is-outlined {
   background-color: transparent;
-  border-color: #3273dc;
-  color: #3273dc;
+  border-color: #707070;
+  color: #707070;
 }
 .button.is-link.is-outlined:hover, .button.is-link.is-outlined:focus {
-  background-color: #3273dc;
-  border-color: #3273dc;
+  background-color: #707070;
+  border-color: #707070;
   color: #fff;
 }
 .button.is-link.is-outlined.is-loading::after {
-  border-color: transparent transparent #3273dc #3273dc !important;
+  border-color: transparent transparent #707070 #707070 !important;
 }
 .button.is-link.is-outlined[disabled], fieldset[disabled] .button.is-link.is-outlined {
   background-color: transparent;
-  border-color: #3273dc;
+  border-color: #707070;
   box-shadow: none;
-  color: #3273dc;
+  color: #707070;
 }
 .button.is-link.is-inverted.is-outlined {
   background-color: transparent;
@@ -2016,7 +2031,7 @@ th {
 }
 .button.is-link.is-inverted.is-outlined:hover, .button.is-link.is-inverted.is-outlined:focus {
   background-color: #fff;
-  color: #3273dc;
+  color: #707070;
 }
 .button.is-link.is-inverted.is-outlined[disabled], fieldset[disabled] .button.is-link.is-inverted.is-outlined {
   background-color: transparent;
@@ -2030,11 +2045,12 @@ th {
   color: #fff;
 }
 .button.is-info:hover, .button.is-info.is-hovered {
-  background-color: #1496ed;
+  background-color: #0e72b4;
   border-color: transparent;
   color: #fff;
 }
 .button.is-info:focus, .button.is-info.is-focused {
+  background-color: #0e72b4;
   border-color: transparent;
   color: #fff;
 }
@@ -2107,11 +2123,12 @@ th {
   color: rgba(0, 0, 0, 0.7);
 }
 .button.is-success:hover, .button.is-success.is-hovered {
-  background-color: #c1eed9;
+  background-color: #8ee1ba;
   border-color: transparent;
   color: rgba(0, 0, 0, 0.7);
 }
 .button.is-success:focus, .button.is-success.is-focused {
+  background-color: #8ee1ba;
   border-color: transparent;
   color: rgba(0, 0, 0, 0.7);
 }
@@ -2184,11 +2201,12 @@ th {
   color: rgba(0, 0, 0, 0.7);
 }
 .button.is-warning:hover, .button.is-warning.is-hovered {
-  background-color: #ffdb4a;
+  background-color: #ffce0a;
   border-color: transparent;
   color: rgba(0, 0, 0, 0.7);
 }
 .button.is-warning:focus, .button.is-warning.is-focused {
+  background-color: #ffce0a;
   border-color: transparent;
   color: rgba(0, 0, 0, 0.7);
 }
@@ -2261,11 +2279,12 @@ th {
   color: #fff;
 }
 .button.is-danger:hover, .button.is-danger.is-hovered {
-  background-color: #ff2b56;
+  background-color: #eb002f;
   border-color: transparent;
   color: #fff;
 }
 .button.is-danger:focus, .button.is-danger.is-focused {
+  background-color: #eb002f;
   border-color: transparent;
   color: #fff;
 }
@@ -2338,11 +2357,12 @@ th {
   color: rgba(0, 0, 0, 0.7);
 }
 .button.is-celadon:hover, .button.is-celadon.is-hovered {
-  background-color: #b2d4bf;
+  background-color: #89bd9d;
   border-color: transparent;
   color: rgba(0, 0, 0, 0.7);
 }
 .button.is-celadon:focus, .button.is-celadon.is-focused {
+  background-color: #89bd9d;
   border-color: transparent;
   color: rgba(0, 0, 0, 0.7);
 }
@@ -2415,11 +2435,12 @@ th {
   color: rgba(0, 0, 0, 0.7);
 }
 .button.is-pink:hover, .button.is-pink.is-hovered {
-  background-color: #ffb3c0;
+  background-color: #ff738c;
   border-color: transparent;
   color: rgba(0, 0, 0, 0.7);
 }
 .button.is-pink:focus, .button.is-pink.is-focused {
+  background-color: #ff738c;
   border-color: transparent;
   color: rgba(0, 0, 0, 0.7);
 }
@@ -4694,7 +4715,7 @@ th {
   }
 }
 .hero.is-link {
-  background-color: #3273dc;
+  background-color: #707070;
   color: #fff;
 }
 .hero.is-link a:not(.button):not(.dropdown-item):not(.tag),
@@ -4713,7 +4734,7 @@ th {
 }
 @media screen and (max-width: 1087px) {
   .hero.is-link .navbar-menu {
-    background-color: #3273dc;
+    background-color: #707070;
   }
 }
 .hero.is-link .navbar-item,
@@ -4723,7 +4744,7 @@ th {
 .hero.is-link a.navbar-item:hover, .hero.is-link a.navbar-item.is-active,
 .hero.is-link .navbar-link:hover,
 .hero.is-link .navbar-link.is-active {
-  background-color: #2366d1;
+  background-color: #636363;
   color: #fff;
 }
 .hero.is-link .tabs a {
@@ -4745,14 +4766,14 @@ th {
 .hero.is-link .tabs.is-boxed li.is-active a, .hero.is-link .tabs.is-boxed li.is-active a:hover, .hero.is-link .tabs.is-toggle li.is-active a, .hero.is-link .tabs.is-toggle li.is-active a:hover {
   background-color: #fff;
   border-color: #fff;
-  color: #3273dc;
+  color: #707070;
 }
 .hero.is-link.is-bold {
-  background-image: linear-gradient(141deg, #1577c6 0%, #3273dc 71%, #4366e5 100%);
+  background-image: linear-gradient(141deg, #5f4e51 0%, #707070 71%, #837977 100%);
 }
 @media screen and (max-width: 768px) {
   .hero.is-link.is-bold .navbar-menu {
-    background-image: linear-gradient(141deg, #1577c6 0%, #3273dc 71%, #4366e5 100%);
+    background-image: linear-gradient(141deg, #5f4e51 0%, #707070 71%, #837977 100%);
   }
 }
 .hero.is-info {
