--- a/views/layouts/index.gohtml
+++ b/views/layouts/index.gohtml
@@ -7,6 +7,7 @@
         <title>Discover Now</title>
         <link rel="stylesheet" href="/static/stylesheets/global.css">
         <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
+        <script defer src="/static/js/focus.js"></script>
     </head>
     <body>
         <div>
