--- a/views/layouts/splash.gohtml
+++ b/views/layouts/splash.gohtml
@@ -11,7 +11,7 @@
                     {{template "splashButtons" .}}
                 </div>
                 <div class="is-hidden-mobile">
-                    <a class="anchor has-text-grey-dark" href="#features" aria-label="Learn more about Discover Now and its features">
+                    <a class="anchor" href="#features" aria-label="Learn more about Discover Now and its features">
                         <span class="is-size-5 is-underlined is-family-monospace">Learn more</span>
                         <span class="anchor__icon icon">
                             <i class="fas fa-angle-down fa-lg"></i>
